tests/ui/imports/import-after-macro-expand-4.stderr
error: `P` is ambiguous
  --> $DIR/import-after-macro-expand-4.rs:12:22
   |
LL |     pub struct S(Vec<P>);
   |                      ^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `P` could refer to the enum imported here
  --> $DIR/import-after-macro-expand-4.rs:11:9
   |
LL |     use crate::*;
   |         ^^^^^^^^
   = help: consider adding an explicit import of `P` to disambiguate
note: `P` could also refer to the trait imported here
  --> $DIR/import-after-macro-expand-4.rs:11:9
   |
LL |     use crate::*;
   |         ^^^^^^^^
   = help: consider adding an explicit import of `P` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: `P` is ambiguous
  --> $DIR/import-after-macro-expand-4.rs:12:22
   |
LL |     pub struct S(Vec<P>);
   |                      ^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `P` could refer to the enum imported here
  --> $DIR/import-after-macro-expand-4.rs:11:9
   |
LL |     use crate::*;
   |         ^^^^^^^^
   = help: consider adding an explicit import of `P` to disambiguate
note: `P` could also refer to the trait imported here
  --> $DIR/import-after-macro-expand-4.rs:11:9
   |
LL |     use crate::*;
   |         ^^^^^^^^
   = help: consider adding an explicit import of `P` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

